--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-form-creator",
+  "name": "forms-creator",
   "version": "1.0.0",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -9,6 +9,7 @@
     "react",
     "form",
     "form-creator",
+    "form-builder",
     "dynamic-form",
     "validation",
     "Zod"
